[gd_scene load_steps=5 format=3 uid="uid://dob8lk4kp57je"]

[ext_resource type="Script" path="res://recursos_proyecto_godot/Scripts/menu.gd" id="1_xq2bn"]
[ext_resource type="Texture2D" uid="uid://cbuuh7r8cnak" path="res://recursos_proyecto_godot/graphics/imgs/menu.jpg" id="2_epvyd"]
[ext_resource type="PackedScene" uid="uid://cuv5ja76yjxrx" path="res://recursos_proyecto_godot/Reusable_Functions/audio.tscn" id="3_htms1"]
[ext_resource type="AudioStream" uid="uid://b2b0srgyio37f" path="res://recursos_proyecto_godot/music/overworld/menu.mp3" id="4_h8jdl"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xq2bn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.72375, 0.723333)
texture = ExtResource("2_epvyd")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -121.0
offset_right = 138.0
offset_bottom = -20.0
grow_vertical = 0

[node name="btnInicio" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Nueva Partida"

[node name="btnOpciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Opciones"

[node name="btnSalir" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Salir"

[node name="OptionsPopup" type="Popup" parent="."]

[node name="vboxOpciones" type="VBoxContainer" parent="OptionsPopup"]
offset_right = 40.0
offset_bottom = 40.0

[node name="txtVolumen" type="Label" parent="OptionsPopup/vboxOpciones"]
layout_mode = 2
text = "Volumen"

[node name="sldVolumen" type="HSlider" parent="OptionsPopup/vboxOpciones"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="btnMovimiento" type="Button" parent="OptionsPopup/vboxOpciones"]
layout_mode = 2
text = "Configurar movimiento
(no implementado todav√≠a)"

[node name="btnCerrar" type="Button" parent="OptionsPopup/vboxOpciones"]
layout_mode = 2
text = "Cerrar
"

[node name="Audio" parent="." instance=ExtResource("3_htms1")]
stream = ExtResource("4_h8jdl")

[connection signal="pressed" from="VBoxContainer/btnInicio" to="." method="_on_btn_inicio_pressed"]
[connection signal="pressed" from="VBoxContainer/btnOpciones" to="." method="_on_btn_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/btnSalir" to="." method="_on_btn_salir_pressed"]
[connection signal="value_changed" from="OptionsPopup/vboxOpciones/sldVolumen" to="." method="_on_sld_volumen_value_changed"]
[connection signal="pressed" from="OptionsPopup/vboxOpciones/btnMovimiento" to="." method="_on_btn_movimiento_pressed"]
[connection signal="pressed" from="OptionsPopup/vboxOpciones/btnCerrar" to="." method="_on_btn_cerrar_pressed"]
